--- a/research/misc.ipynb
+++ b/research/misc.ipynb
@@ -20,22 +20,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'funny Chandra'"
+       "'Sunny Chandra'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "e = Example(\"funny\")\n",
+    "e = Example(\"Sunny\")\n",
     "e.get_name()\n",
     "e.fullname"
    ]
