--- a/research/simple_implimentation.ipynb
+++ b/research/simple_implimentation.ipynb
@@ -326,13 +326,107 @@
      "diskcache": false,
      "headerColor": "inherit",
      "id": "0b576bc8-3a1d-463e-b7ee-9f937bfdfc8f",
-     "isComponent": false,
-     "name": "",
-     "parents": []
-    }
+     "isComponent": true,
+     "name": "prepare base model",
+     "parents": [
+      {
+       "id": "3b18eb1d-cce5-4a51-97da-411ff03f1646",
+       "name": "data ingestion"
+      }
+     ]
+    },
+    "tags": []
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "from pathlib import Path\n",
+    "\n",
+    "base_model_filepath = \n",
+    "updated_base_model_path = \n",
+    "param_image_size\n",
+    "param_classes\n",
+    "param_learning_rate\n",
+    "param_include_top\n",
+    "param_weights\n",
+    "\n",
+    "from utils import create_directories\n",
+    "from logger import logger\n",
+    "import io\n",
+    "\n",
+    "def save_model(path: Path, model: tf.keras.Model):\n",
+    "    model.save(path)\n",
+    "    logger.info(f\"model saved at: {path}\")\n",
+    "\n",
+    "def get_base_model(model_name: str=\"VGG16\"):\n",
+    "    logger.info(f\"creating base model for transfer learning...\")\n",
+    "    self.model = tf.keras.applications.vgg16.VGG16(\n",
+    "        input_shape=self.config.param_image_size,\n",
+    "        weights=self.config.param_weights,\n",
+    "        include_top=self.config.param_include_top\n",
+    "    )\n",
+    "    model_path = self.config.base_model_filepath\n",
+    "\n",
+    "    self.save_model(path=model_path, model=self.model)\n",
+    "    logger.info(f\"base model: {model_name} saved!\")\n",
+    "\n",
+    "\n",
+    "@staticmethod\n",
+    "def _prepare_full_model(model, classes, freeze_all, freeze_till, learning_rate):\n",
+    "    if freeze_all:\n",
+    "        logger.info(\"freeze all the layers of base CNN layer\")\n",
+    "        for layer in model.layers:\n",
+    "            layer.trainable = False\n",
+    "    elif (freeze_till is not None) and (freeze_till > 0):\n",
+    "        logger.info(f\"freeze the layers of base CNN layer till {freeze_till}\")\n",
+    "        for layer in model.layers[:-freeze_till]:\n",
+    "            layer.trainable = False\n",
+    "\n",
+    "    ## add our fully connected layers\n",
+    "    flatten_in = tf.keras.layers.Flatten()(model.output)\n",
+    "    prediction = tf.keras.layers.Dense(\n",
+    "        units=classes,\n",
+    "        activation=\"softmax\"\n",
+    "    )(flatten_in)\n",
+    "\n",
+    "    full_model = tf.keras.models.Model(\n",
+    "        inputs = model.input,\n",
+    "        outputs = prediction\n",
+    "    )\n",
+    "\n",
+    "    full_model.compile(\n",
+    "        optimizer = tf.keras.optimizers.SGD(learning_rate=learning_rate),\n",
+    "        loss = tf.keras.losses.CategoricalCrossentropy(),\n",
+    "        metrics = [\"accuracy\"]\n",
+    "    )\n",
+    "\n",
+    "    logger.info(\"custom model is compiled and ready to be trained\")\n",
+    "    full_model.summary()\n",
+    "    return full_model\n",
+    "\n",
+    "@staticmethod\n",
+    "def _log_model_summary(full_model):\n",
+    "    with io.StringIO() as stream:\n",
+    "        full_model.summary(print_fn=lambda x: stream.write(f\"{x}\\n\"))\n",
+    "        summary_str = stream.getvalue()\n",
+    "    return summary_str\n",
+    "\n",
+    "def update_base_model(self):\n",
+    "    logger.info(f\"creating custom model for transfer learning\")\n",
+    "    self.full_model = self._prepare_full_model(\n",
+    "        model=self.model,\n",
+    "        classes=self.config.param_classes,\n",
+    "        freeze_all=True,\n",
+    "        freeze_till=None,\n",
+    "        learning_rate=self.config.param_learning_rate\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "    logger.info(f\"full model summary: \\n{self._log_model_summary(self.full_model)}\")\n",
+    "\n",
+    "    self.save_model(path=self.config.updated_base_model_path, model=self.full_model)\n",
+    "    logger.info(f\"custom model saved!\")\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
@@ -353,7 +447,7 @@
    "version": "1.0"
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.8.13 (conda)",
    "language": "python",
    "name": "python3"
   },
@@ -368,6 +462,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "406b130da8ef9e06d1a3a2dfd0fdafc441daca366b10d436a5c3ee2f67e0e84e"
+   }
   }
  },
  "nbformat": 4,
